--- a/css/style.css
+++ b/css/style.css
@@ -23,17 +23,15 @@ section{
     overflow : hidden;
     margin-bottom: 100px;
 }
-
 section:last-of-type{
     margin-bottom: 150px;
 }
-
+/* section title */
 section h3{
     font-size: 22px;
     margin-bottom: 20px;
     color : #111;
 }
-
 section .banner{
     width: 100%;
     overflow : hidden;
@@ -41,44 +39,38 @@ section .banner{
 section .banner img{
     width: 100%;
 }
-
 section .banner video{
     width: 100%;
 }
-
 .text_area{
     text-align: center;
 }
-/* title */
+/* main page title */
 .text_area h2{
     font-size: 40px;
     font-weight: bold;
     margin: 30px 0 15px;
+    color: #111;
 }
+/* main page subtitle */
 .text_area p{
     font-size: 18px;
     margin-bottom: 15px;
+    color: #111;
 }
-
-.text_area p:last-of-type{
-
-}
-
 /* common btn style */
 .text_area a{
     display: inline-block;
     border-radius: 22px;
     padding : 10px 20px;
     margin-right: 3px;
-    background: #000;
+    background: #111;
     color : #fff;
     transition : 0.3s;
 }
-
 .text_area a:hover{
     opacity: 0.7;
 }
-
 .text_area a:last-child{
     margin-right: 0;
 }
@@ -111,18 +103,15 @@ section .banner video{
     background: #fff;
     transition : 0.3s;
 }
-
 .box a:hover{
     opacity: 0.7;
 }
-
 .box_bg{
     width: 100%;
     height: 700px;
     background-size: cover;
     background-position: center;
 }
-
 .box1_bg{
     background-image: url('../img/main/section6_img.jpg');
 }
@@ -133,55 +122,46 @@ section .banner video{
 
 
 /* section swiper, item area start */
-.item_wrap{}
-.item_wrap .item{}
-.item_wrap .item a{}
 .item_wrap .item a img{
     width: 100%;
 }
-
 .item_text{
     margin-bottom: 36px;
 }
+/* swiper title */
 .item_text h4{
     font-size: 20px;
     font-weight : bold;
     margin : 10px 0;
+    color: #111;
 }
+/* swiper sub text */
 .item_text p{
     font-size: 14px;
     margin-bottom: 5px;
     color : #666;
 }
-
 .item span{
     position : absolute;
     font-size: 16px;
     top: 40px;
     left: 40px;
+    color: #111;
 }
 /* section swiper, item area end */
 /* section area end */
 
 /* media query */
-@media screen and (max-width : 1024px){
-    .swiper-container {
-        /* min-width: 50%; */
-    }
-}
-
-@media screen and (max-width : 960px){
-
-}
-
 @media screen and (max-width : 640px){
     .text_area{
         text-align: left;
         word-break: keep-all;
     }
+    /* main page title */
     .text_area h2{
         font-size: 30px;
     }
+    /* main page sub title */
     .text_area p{
         font-size: 14px;
         margin-bottom: 15px;
@@ -190,7 +170,6 @@ section .banner video{
     .text_area a{
         margin: 3px;
     }
-    
     /* box */
     .box{
         float : none;
