--- a/css/wishList.css
+++ b/css/wishList.css
@@ -11,17 +11,19 @@ section{
     overflow :hidden;
 }
 /* lnb area start */
-.lnb_button{}
-.lnb_button a{
-
-}
 .lnb{
     float : left;
     width: 220px;
     margin-top: 20px;
     transition : 0.4s;
+    /* color: #111; */
     background: #fff;
+    transition : 0.3s;
     z-index: 40;
+}
+.lnb.Top_on{
+    top: 0;
+    margin-top: 0;
 }
 .lnb.on{
     left: 20px;
@@ -58,12 +60,7 @@ section{
     margin-right: 10px;
     margin-bottom: 2px;
 }
-.lnb > ul > li > a{
-
-}
-
 /* lnb_submenu */
-.lnb_submenu{}
 .lnb_submenu li{
     font-size: 13px;
     font-weight: normal;
@@ -92,7 +89,8 @@ section{
 }
 .content_list h2{
     font-size: 22px;
-    margin : 40px 0 30px;
+    margin: 40px 0 30px;
+    color: #111;
 }
 .content_list ul{
     display : flex;
@@ -107,13 +105,14 @@ section{
 .content_list ul li a{
     position: relative;
     display: inline-block;
+    color: #111;
 }
 .content_list .list_close{
     position: absolute;
     width: 28px;
     top: 5px;
     left: 5px;
-    opacity: 0.7;
+    opacity: 0.3;
 }
 .list_close:hover{
     opacity: 1;
@@ -122,7 +121,6 @@ section{
     width: 100%;
 }
 /* content_text */
-.content_text{}
 .content_text a{
     display: block;
     width: 100%;
@@ -161,7 +159,6 @@ section{
         width: 100%;
         padding-right: 20px;
         box-sizing: border-box;
-        /* background: #000; */
     }
     .lnb_button{
         display : block; 
@@ -185,6 +182,7 @@ section{
         flex-basis : calc(50% - 20px);
     }
 }
+
 @media screen and (max-width : 405px){
     .content_list ul li{
         flex-basis: calc(100% - 20px);
@@ -193,6 +191,7 @@ section{
         right: 20px;
     }
 }
+
 @media screen and (max-width : 330px){
     body,html{
         min-width: 330px;
