--- a/css/men.css
+++ b/css/men.css
@@ -162,7 +162,7 @@ section .banner video{
     margin : 10px 0;
     color: #111;
 }
-/* swiper sun text */
+/* swiper sub text */
 .item_text p{
     font-size: 14px;
     margin-bottom: 5px;
